Fixing header on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -187,7 +187,7 @@ header {
                 margin-bottom: 50px;
             }
             img {
-                max-height:300px;
+                max-width:290px;
             }
         }
     }
